# Weave-Plugin

./: .gitignore  DESIGN.md  README.md  pyproject.toml
claude_weave/: __init__.py  hook.py
docs/superpowers/specs/: 2026-07-16-friendly-readme-and-first-release-design.md  2026-07-16-hook-and-otel-hardening-design.md  2026-07-16-lean-harness-extensibility-design.md  2026-07-16-weave-agent-spans-design.md
examples/: README.md  claude-code.settings.capture.json  config.toml
profiles/: claude-code.toml
specs/: 01-data-model.md  02-harness-profiles.md  03-wire-protocol.md  04-sidecar-lifecycle.md  06-weave-mapping.md  07-config.md  07-weave-mapping.md  08-integration.md  README.md  WEAVE_SPAN_CONTRACT.md
tests/: conftest.py  test_cli.py  test_config_surface.py  test_enrich.py  test_genai.py  test_hook_integration.py  test_install.py  test_profile.py  test_redact.py  test_routing.py  test_trace_role.py  test_tracer.py
tools/: inspect_capture.py
weave_agent_adapter/: __init__.py  cli.py  config.py  config_surface.py  emit.py  enrich.py  hook.py  install.py  model.py  profile.py  redact.py  sidecar.py  sink.py  trace_role.py  tracer.py
weave_agent_adapter/core/: model.py
weave_agent_adapter/profiles/: claude-code.toml  codex.toml
weave_agent_adapter/sinks/: routing.py  weave.py
