[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "weave-agent-adapter"
version = "0.0.0"
description = "Harness-agnostic plugin that traces agent-harness sessions to W&B Weave"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
dependencies = [
    # profile/config parsing; stdlib tomllib on 3.11+
    "tomli; python_version < '3.11'",
]

# The hook path is stdlib-only; only the sidecar needs Weave.
[project.optional-dependencies]
sidecar = ["weave>=0.51"]
dev = ["pytest>=7"]

[project.scripts]
weave-agent-adapter = "weave_agent_adapter.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["weave_agent_adapter"]

# ship the bundled harness profiles as package data
[tool.hatch.build.targets.wheel.force-include]
"weave_agent_adapter/profiles" = "weave_agent_adapter/profiles"
