[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "weave-agent-adapter"
version = "0.1.0"
description = "Harness-agnostic plugin that traces agent-harness sessions to W&B Weave"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Matt Liu", email = "mattliujhu@gmail.com" }]
keywords = ["weave", "wandb", "tracing", "observability", "claude-code", "codex", "agent", "hooks"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Debuggers",
    "Topic :: System :: Monitoring",
]
dependencies = [
    # profile/config parsing; stdlib tomllib on 3.11+
    "tomli; python_version < '3.11'",
]

[project.urls]
Homepage = "https://github.com/mattliu-mygit/Weave-Agent-Adapter"
Repository = "https://github.com/mattliu-mygit/Weave-Agent-Adapter"
Issues = "https://github.com/mattliu-mygit/Weave-Agent-Adapter/issues"

# The hook path is stdlib-only; only the sidecar needs Weave.
[project.optional-dependencies]
sidecar = ["weave>=0.51"]
dev = ["pytest>=7"]

[project.scripts]
weave-agent-adapter = "weave_agent_adapter.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["weave_agent_adapter"]
# profiles/*.toml live inside the package and are included automatically
